# Complete-NNoM-Sample

./: .gitignore  readme.md
cpp_inference/: CMakeLists.txt  main.c  test_data.h  test_labels.h  weights.h
python_compare/: main.py
python_model/: constants.py  data.py  evaluate.py  headers.py  main.py  model.py
python_model/nnom/old/: nnom_utils.py
tools/: BuildC.ps1  Pipeline.ps1  RunC.ps1  RunCompare.ps1  RunPython.ps1
